--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <head>
         <title>Learning JavaScript</title>
 
-        <script type="text/javaScript" src="script.js"></script>
+        <!-- <script type="text/javaScript" src="script.js"></script> -->
 
     </head>
 
     <body>
         <!-- <h1>Learning JavaScript</h1> -->
+
+        <script type="text/javaScript" src="script.js"></script>
 
         <button onclick="window.location.href='https://google.com'">Go to Google</button>
         <button onclick="window.location.href = window.location.href">Clear the page</button>
@@ -50,7 +52,11 @@
         <div id="interval_area">
         </div>
         
-        
+        <br><br>
+
+        <button onclick="getName()" >Test Local and Session Storage</button>
+        <div id="display_area">
+        </div>
 
     </body>
 </html>
