var != let != const, variables in strings, desconstruct objects and arrays, spread&rest, arrayOperation, includes&endsWith&startsWith,some&every

--- a/index.html
+++ b/index.html
@@ -58,5 +58,9 @@
         <div id="display_area">
         </div>
 
+        <br><br>
+
+        <button onclick="console.log(registerStudent({ name: 'Sagi', bornIn: 'Pontalina', startYear: '2021' }))">Registrar Sagi</button>
+
     </body>
 </html>
